--- a/style3.css
+++ b/style3.css
@@ -86,8 +86,8 @@ header {
     padding: 10px;
     border: none;
     border-radius: 20px;
-    background-color: gray;
-    color: bisque;
+    background-color: whitesmoke;
+    color: black;
 }
 
 .search button {
